# dupit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
dupit/: Cargo.toml
dupit-derive/: Cargo.toml
dupit-derive/src/: lib.rs
dupit/src/: lib.rs  lib_readme.md
dupit/tests/: test_compile.rs  test_dup.rs
dupit/tests/expand/: cloneable.expanded.rs  cloneable.rs  generic.expanded.rs  generic.rs
dupit/tests/fail/: not_clone.rs  not_clone.stderr
